<resources>
    <string name="app_name">MAD-CW01</string>
    <string name="identify_the_car_make">IDENTIFY THE CAR MAKE</string>
    <string name="hints">HINTS</string>
    <string name="identify_the_car_image">IDENTIFY THE CAR IMAGE</string>
    <string name="advanced_level">ADVANCED LEVEL</string>
    <string name="countdown_timer">Countdown Timer</string>
    <string name="activity1Name">Identify Car Make</string>
    <string name="identify">IDENTIFY</string>
    <string name="next">NEXT</string>
    <string name="activity2Name">Hints</string>
    <string name="hintSubmit">SUBMIT</string>
    <string name="activity3Name">Identify Car Image</string>
    <string name="activity4Name">Advanced Level</string>
    <string name="identifyCarImageInstructions">Click on the image corresponding to the below displayed car make:</string>
    <string name="advancedLevelInstructions">Guess the 3 car manufacturers and enter details using the text boxes.</string>
    <string name="submit">SUBMIT</string>
    <string name="identifyCarMakeInstructions">Select the car make which matches the image displayed below:</string>
    <string name="timerDefaultValue">20</string>
    <string name="advancedLevelEditTextHint">Enter the car make</string>
    <string name="advancedLevelDefaultPoints">Points: 0</string>
    <string name="hintsInstructions">Guess the make of the car by entering character by character into the text field below.</string>


    <string-array name="car_makes">
        <item>Alfa Romeo</item>
        <item>Aston Martin</item>
        <item>Audi</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Bugatti</item>
        <item>Cadillac</item>
        <item>Chevrolet</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>GMC</item>
        <item>Honda</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Lamborghini</item>
        <item>Land Rover</item>
        <item>Lexus</item>
        <item>Mazda</item>
        <item>McLaren</item>
        <item>Mercedes</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Rolls Royce</item>
        <item>Seat</item>
        <item>Skoda</item>
        <item>Suzuki</item>
        <item>Tesla</item>
        <item>Toyota</item>
        <item>Volkswagon</item>
    </string-array>
</resources>